# rust-lichess-wrapper

./: Cargo.toml  README.md
src/: lib.rs
src/core/: client.rs
src/core/ndjson/: mod.rs  ndjson.rs
src/lichess/: count.rs  mod.rs  performances.rs  playtime.rs  profile.rs  rating_history.rs  title.rs  top10s.rs  user.rs
