[package]
name = "rust-lichess-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
crossbeam = "0.8"
chrono = { vesion = "0.4", features = ["serde"] }
memchr = "2"
